Create praecepta-core module